tests/reference/asr_preprocess-cpp6-556419a.stderr
semantic error: Variable 'z12' is not declared
 --> tests/errors/cpp6.f90:3:1
  |
3 | #include "cpp6.h"
  | ^^^^^^^^^^^^^^^^^ 'z12' is undeclared
